Make text font bigger

--- a/lecture/introduction.Rmd
+++ b/lecture/introduction.Rmd
@@ -11,6 +11,13 @@ output:
       countIncrementalSlides: false
 ---
 
+<style type="text/css">
+.remark-slide-content {
+    font-size: 28px;
+    padding: 1em 4em 1em 4em;
+}
+</style>
+
 # Header
 One slide.
 
